--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,15 @@ main {
   min-height: 0;
 }
 
+.splash-desc {
+  font-size: 0.82rem;
+  color: var(--text-subtle);
+  text-align: center;
+  max-width: 360px;
+  margin: 0 auto;
+  line-height: 1.7;
+}
+
 .splash img {
   /* TODO: remove size constraints when page expands beyond 100vh */
   width: clamp(220px, 40vh, 320px);
